// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemApp Snapshot SystemApp component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Loading
  </Text>
</View>
`;

exports[`SystemApp Snapshot SystemApp component after complete render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    🚨 BlueBase Error
  </Text>
  <Text>
    Cannot read property 'root' of undefined
  </Text>
</View>
`;
